kubernetes-tutorial/kube-learning/microservice-lab/bankinterest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bank-interest
  name: bank-interest
  namespace: default
spec:
  replicas: 3 #CHANGE
  minReadySeconds: 45
  selector:
    matchLabels:
      app: bank-interest
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bank-interest
    spec:
      containers:
        - name: bank-interest
          image: in28igniteminds/bank-interest-service:0.0.2.RELEASE
          imagePullPolicy: IfNotPresent
          ports:
            - name: liveness-port
              containerPort: 8000
          resources: #CHANGE
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi #256Mi
          readinessProbe:
            httpGet:
              path: /rates/
              port: liveness-port
            failureThreshold: 5
            periodSeconds: 10
            initialDelaySeconds: 60
          livenessProbe:
            httpGet:
              path: /rates/
              port: liveness-port
            failureThreshold: 5
            periodSeconds: 10
            initialDelaySeconds: 60
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: bank-interest
  name: bank-interest
  namespace: default
spec:
  ports:
    - # nodePort: 30702 #CHANGE
      port: 8000 #CHANGE
      protocol: TCP
      targetPort: 8000 #CHANGE
  selector:
    app: bank-interest
  sessionAffinity: None #CHANGE
  type: NodePort
