kubernetes-tutorial/kube-learning/microservice-lab/fd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fd-return
  name: fd-return
  namespace: default
spec:
  replicas: 1 #CHANGE
  minReadySeconds: 45
  selector:
    matchLabels:
      app: fd-return
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fd-return
    spec:
      containers:
        - image: in28igniteminds/fd-returns-service:0.0.2.RELEASE #CHANGE
          imagePullPolicy: IfNotPresent
          name: fd-return
          env:
            - name: CURRENCY_EXCHANGE_SERVICE_HOST
              value: http://currency-exchange
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: fd-return
  name: fd-return
  namespace: default
spec:
  ports:
    - port: 8100 #CHANGE
      protocol: TCP
      targetPort: 8100 #CHANGE
  selector:
    app: fd-return
  sessionAffinity: None #CHANGE
  type: NodePort
